# SafePointers

./: CMakeLists.txt
Example/: Main.cpp
Include/: SafePointer.hpp
